--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,6 @@
 * {
   box-sizing: border-box;
 }
-
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
 body {
   font-size: 100%;
   line-height: 1.6;
@@ -16,26 +10,18 @@ body {
   color: #333;
   background-color: #fff;
 }
-
 .container {
-  width: 100%;
+  width: 350px;
   max-width: 992px;
   margin: 0 auto;
   padding: 0 1em;
   background-color: #fff;
 }
-@media (min-width: 900px) {
-  .container {
-    padding: 0;
-  }
-}
-
 ul {
   list-style: none;
   padding: 0 1em;
   margin-left: 0;
 }
-
 a:link,
 a:visited,
 a:hover,
@@ -44,50 +30,32 @@ a:focus {
   text-decoration: none;
   transition: all 0.3s;
 }
-
 button {
   transition: all 0.3s;
 }
-
 img {
   display: block;
   width: 100%;
   height: auto;
 }
-
 .display-title {
   font-size: 1.8rem;
   text-align: center;
   letter-spacing: 1.3px;
 }
-@media (min-width: 600px) {
-  .display-title {
-    font-size: 3rem;
-  }
-}
-
 .page-title {
   text-align: center;
   font-weight: 700;
 }
-@media (min-width: 600px) {
-  .page-title {
-    font-size: 2rem;
-    font-weight: 300;
-  }
-}
-
 .text-light {
   color: #efefef;
 }
-
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-column-gap: 1em;
   grid-row-gap: 2em;
 }
-
 .header .arrow {
   width: 50px;
   height: 50px;
@@ -132,7 +100,6 @@ img {
 .header .header__cart .header__submenu .cart {
   fill: #ea332a;
   display: inline-block;
-  float: left;
   margin-right: 2px;
   cursor: pointer;
 }
@@ -284,30 +251,6 @@ img {
 }
 .card__btn:active {
   border: 3px solid #9e1610 inset;
-}
-
-.footer {
-  margin-top: 4em;
-  padding-bottom: 2em;
-  padding-top: 2em;
-  border-top: 1px dashed #b61a12;
-}
-
-.footer__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 0.8rem;
-}
-
-.footer__link-item,
-.footer__link-item {
-  color: #ea332a;
-}
-.footer__link-item:hover, .footer__link-item:focus,
-.footer__link-item:hover,
-.footer__link-item:focus {
-  color: #9e1610;
 }
 
 @-webkit-keyframes point-down {
