--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,11 @@ h1, h2, h3, h4, h5, h6{
 
 .img__container{
     background: #d7d7d7;
-    padding: 10px;
+    line-height: 0px;
 }
 
 .img__container img{
-    width: 150px;
+    width: 100px;
 }
 
 .carrito{
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6{
 
 .element__data{
     padding: 10px;
-    background: red;
+    background: #c8c8c8;
 }
 
 .placehold__number{
