--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&family=Rowdies&display=swap');
 
+:root{
+    --color-fondo: #0077b6;
+    --fuenteTitulo: 'Rowdies', cursive;
+    --fuenteTexto: 'Roboto', sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -8,11 +14,11 @@
 
 body{
     background: #0077b6;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--fuenteTexto);
 }
 
 h1, h2, h3, h4, h5, h6{
-    font-family: 'Rowdies', cursive;
+    font-family: var(--fuenteTitulo);
 }
 
 .contenedor{
@@ -77,6 +83,7 @@ h1, h2, h3, h4, h5, h6{
     color: #fff;
     padding: 10px;
     width: 40px;
+    cursor: pointer;
 }
 
 .mas{
@@ -89,7 +96,6 @@ h1, h2, h3, h4, h5, h6{
 
 .element__data{
     padding: 10px;
-    background: #c8c8c8;
 }
 
 .placehold__number{
