--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,18 @@ h1, h2, h3, h4, h5, h6{
 .top{
     display: flex;
     justify-content: space-around;
+    padding: 20px;
 }
 
 .img__container{
     background: #d7d7d7;
-    line-height: 0px;
+    padding: 10px;
+    border-radius: 25px;
 }
 
 .img__container img{
     width: 100px;
+    border-radius: 25px;
 }
 
 .carrito{
@@ -69,6 +72,9 @@ h1, h2, h3, h4, h5, h6{
 .element__container{
     display: flex;
     padding: 10px;
+    background: #d7d7d7;
+    border-radius: 25px;
+    margin: 10px 0px;
 }
 
 .counter__container{
@@ -87,11 +93,11 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .mas{
-    background: green;
+    background: rgb(27, 188, 129);
 }
 
 .menos{
-    background: red;
+    background: rgb(237, 27, 16);
 }
 
 .element__data{
