--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body{
 h1, h2, h3, h4, h5, h6{
     font-family: var(--fuenteTitulo);
     color: rgb(28, 102, 75);
+    text-transform: uppercase;
 }
 
 .contenedor{
