--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .top{
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
+    display: block;
 }
 
 .img__container{
@@ -54,6 +52,7 @@ h1, h2, h3, h4, h5, h6{
 .carrito{
     border-radius: 25px;
     cursor: pointer;
+    padding: 10px;
 }
 
 .numeroCarrito{
@@ -75,7 +74,7 @@ h1, h2, h3, h4, h5, h6{
     padding: 10px;
     background: #d7d7d7;
     border-radius: 25px;
-    margin: 10px 0px;
+    margin: 10px;
     align-items: center;
 }
 
@@ -90,8 +89,9 @@ h1, h2, h3, h4, h5, h6{
     border-radius: 25px;
     color: #fff;
     padding: 10px;
-    width: 40px;
+    width: 35px;
     cursor: pointer;
+    border: none;
 }
 
 .mas{
@@ -108,8 +108,18 @@ h1, h2, h3, h4, h5, h6{
 
 .placehold__number{
     padding: 10px;
+    font-weight: bold;
 }
 
 .precio{
     margin: 10px 0px;
+}
+
+.boton__checkout__container{
+    display: flex;
+}
+
+.boton__checkout__container button{
+    margin: 10px;
+    border: none;
 }
