--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6{
 .img__container img{
     width: 100px;
     height: 100px;
-    border-radius: 100%;
+    border-radius: 25px;
 }
 
 .carrito{
@@ -122,4 +122,13 @@ h1, h2, h3, h4, h5, h6{
 .boton__checkout__container button{
     margin: 10px;
     border: none;
+}
+.animacion1{
+    animation: animation1 1s;   
+}
+
+@keyframes animation1{
+    0%{
+        opacity: .5;
+    }
 }
