--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,6 @@ img {
 
 .container{
     width: 320px;
-    height: 1000px;
-    height: auto;
     background: #fff;
     padding: 20px;
     position: absolute;
@@ -34,7 +32,7 @@ img {
     user-select: none;
 }
 
-#choices {
+#choices > div {
     display: flex;
 }
 
@@ -67,6 +65,7 @@ img {
     background-color: #fefefe;
     position: absolute;
     width: 320px;
+    margin-bottom: 100px;
     background: #fff;
     padding: 20px;
     position: absolute;
@@ -85,14 +84,12 @@ div > .fix{
     background: rgb(231, 231, 231);
     cursor: pointer;
     transition: .3s;
-    border: 1px solid rgb(207, 206, 206);
     border-radius: 12px;
     user-select: none;
 }
 
 .fix:hover {
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
-    transform: scale(1.2);
 }
 
 .cantidad {
@@ -108,41 +105,32 @@ div > .fix{
     user-select: none;
 }
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    
-}
-
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    height: 100%;
-}
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    font-size: 28px;
+#total {
     font-weight: bold;
-    position: absolute;
-    right: 20px;
-    top: 19px;
-    transition: .3s;
-    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    font-size: 14px;
+    margin-bottom: 10px;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.items span {
+    display: block;
+    margin-bottom: 6px;
+}
+
+.dolar {
+    background: rgba(210, 210, 210, 0.8);
+    color: rgb(72, 72, 72);
+    font-weight: bold;
+    position: relative;
+    font-size: 14px;
+    right: 0px;
+    bottom: -27px;
+    text-align: center;
+    user-select: none;
+    padding: 5px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 .btns {
@@ -179,29 +167,36 @@ div > .fix{
     color: #333;
 }
 
-#total {
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    margin: 10px 0px;
+.modal {
+    display: none; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    
 }
 
-.items span {
-    display: block;
-    margin-bottom: 6px;
+.modal-content {
+    background-color: #fefefe;
+    height: 539px;
 }
 
-.dolar {
-    background: rgba(210, 210, 210, 0.8);
-    color: rgb(72, 72, 72);
+.close {
+    color: #aaa;
+    font-size: 28px;
     font-weight: bold;
-    position: relative;
-    font-size: 14px;
-    right: 0px;
-    bottom: -27px;
-    text-align: center;
+    position: absolute;
+    right: 20px;
+    top: 19px;
+    transition: .3s;
     user-select: none;
-    padding: 5px;
-    border-radius: 0px 0px 10px 10px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
